--- a/Frontend/src/myStructure/Authentication/Google.css
+++ b/Frontend/src/myStructure/Authentication/Google.css
@@ -2,5 +2,6 @@
   background-color: #212529 !important;
   color: white !important;
   border: none !important;
-  margin-left: 15%;
+  width: 100%;
+  justify-content: center;
 }
