--- a/Frontend/src/Home/Home page/Card.css
+++ b/Frontend/src/Home/Home page/Card.css
@@ -17,5 +17,6 @@
       rgb(68, 68, 68, 0.2) 50%,
       rgb(68, 68, 68, 0.2) 55%,
       transparent 70%,
-      transparent 100%)
-};
+      transparent 100%
+    )
+}
